WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
210819
[Cocoa] Don't bother compiling UpdateInfo since it's not used
https://bugs.webkit.org/show_bug.cgi?id=210819
Summary
[Cocoa] Don't bother compiling UpdateInfo since it's not used
Brent Fulgham
Reported
2020-04-21 15:41:35 PDT
We don't use the UpdateInfo class in Cocoa-based builds, so let's not bother building it!
Attachments
Patch
(2.89 KB, patch)
2020-04-21 15:43 PDT
,
Brent Fulgham
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brent Fulgham
Comment 1
2020-04-21 15:43:28 PDT
Created
attachment 397132
[details]
Patch
Darin Adler
Comment 2
2020-04-21 15:46:17 PDT
Comment on
attachment 397132
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=397132&action=review
> Source/WebKit/UIProcess/DrawingAreaProxy.h:55 > +#if USE(COORDINATED_GRAPHICS) || USE(TEXTURE_MAPPER) > +class UpdateInfo; > +#endif
Seems overkill to make the forward declaration conditional. OK, but maybe not necessary to be so careful.
EWS
Comment 3
2020-04-21 16:12:33 PDT
Committed
r260473
: <
https://trac.webkit.org/changeset/260473
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 397132
[details]
.
Radar WebKit Bug Importer
Comment 4
2020-04-21 16:13:15 PDT
<
rdar://problem/62137073
>
Brent Fulgham
Comment 5
2020-04-21 16:20:12 PDT
This was actually <
rdar://problem/61774766
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug