[Cocoa] Don't bother compiling UpdateInfo since it's not used https://bugs.webkit.org/show_bug.cgi?id=210819 <rdar://problem/61774766>

Reviewed by Darin Adler.

Since we don't use the UpdateInfo class in Cocoa builds, let's not
bother building it.

* Shared/UpdateInfo.cpp:
* Shared/UpdateInfo.h:
* UIProcess/DrawingAreaProxy.h:


Canonical link: https://commits.webkit.org/223711@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260473 268f45cc-cd09-0410-ab3c-d52691b4dbfc