Source/WebKit/Shared/UpdateInfo.h
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2011 Apple Inc. All rights reserved.
+ * Copyright (C) 2011-2020 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -23,8 +23,9 @@
  * THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-#ifndef UpdateInfo_h
-#define UpdateInfo_h
+#pragma once
+
+#if USE(COORDINATED_GRAPHICS) || USE(TEXTURE_MAPPER)
 
 #include "ShareableBitmap.h"
 #include <WebCore/IntRect.h>
@@ -75,4 +76,4 @@ public:
 
 } // namespace WebKit
 
-#endif // UpdateInfo_h
+#endif
